--- a/studentregister/src/main/webapp/css/student.css
+++ b/studentregister/src/main/webapp/css/student.css
@@ -195,3 +195,13 @@ background-color: #006064;
     white-space: nowrap;
     border-radius: 3px;
 }
+.present #ab
+{
+	width:20px;
+	height:20px;
+}
+.active
+{
+	background-color:white;
+	
+}
