--- a/studentregister/src/main/webapp/css/student.css
+++ b/studentregister/src/main/webapp/css/student.css
@@ -135,7 +135,7 @@ button a
     white-space: nowrap;
     border-radius: 3px;
 }
-.attandance,.classall
+.attandance,.courseall
 {
 	margin-top:20px;
 }
@@ -144,11 +144,11 @@ button a
 	padding:10px 10px;
 
 }
-.classall th
+.courseall th
 {
 padding:10px 10px;	
 }
-.classall td
+.courseall td
 {
 	padding:10px 10px;
 
@@ -204,4 +204,38 @@ background-color: #006064;
 {
 	background-color:white;
 	
+}
+.studentcourse input
+{
+	
+	height:40px;
+	weight:150px;
+	font-weight:bold;
+	font-size:20px;
+	background-color: #f8f8f8;
+    color: #555555;
+    border: 1px solid #cccccc;
+    border-radius: 3px;
+    font-size: 18px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.075);
+    padding: 10px 16px;
+    font-style:italic;
+    margin-top:10px;
+    margin-left:15px;
+
+}
+.studentcourse #save
+{
+background-color: #006064;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+    padding: 15px 16px;
+    outline: none;
+    margin-top: 20px;
+    font-size: 14px;
+    letter-spacing: 1px;
+    border: none;
+    white-space: nowrap;
+    border-radius: 3px;
 }
