--- a/studentregister/src/main/webapp/css/student.css
+++ b/studentregister/src/main/webapp/css/student.css
@@ -135,7 +135,7 @@ button a
     white-space: nowrap;
     border-radius: 3px;
 }
-.attandance,.courseall
+.attandance,.studentcourseall
 {
 	margin-top:20px;
 }
@@ -153,7 +153,7 @@ padding:10px 10px;
 	padding:10px 10px;
 
 }
-.standard
+.standard,.studentcourse
 {
 	margin-top:40px;
 }
@@ -238,4 +238,13 @@ background-color: #006064;
     border: none;
     white-space: nowrap;
     border-radius: 3px;
+}
+.studentcourseall th
+{
+padding:10px 10px;	
+}
+.studentcourseall td
+{
+	padding:10px 10px;
+
 }
